syntax = "proto3";
package proto;

//option go_package = ".";

import "google/api/annotations.proto";


service AuthMgrService {

    rpc GenerateToken(GenerateTokenRequest)returns (GenerateTokenResponse){}
    rpc VerifyToken(TokenRequest) returns (VerifyTokenResponse){}

    rpc RegisterUser(RegisterUserRequest) returns (User) {}

    rpc DeleteUser(UserIdRequest) returns (EmptyMessage){}

    rpc GetUser (GetUserRequest) returns (User) {}

}

message TokenRequest{
    string token =1;
}

message VerifyTokenResponse{
    string email = 1;
    string role = 2;
}

message GenerateTokenRequest{
    string email = 1;
    string password =2; 
}

message GenerateTokenResponse{
    string token =1;
}

message RegisterUserRequest{
    string email =1;
    string password = 2;
    string role = 4; 
}

message User{
    string id =1;
    string email = 2 ;
    string role = 5;
}

message GetUserRequest {
    string id = 1;
    string email = 2;
}

// empty
message EmptyMessage {
}

message UserIdRequest {
    string id = 1;
}